TEST_PROGRAMS/INVALID/shivan_sahib/semicol_at_end_if.min
if x then
	print "toot";
endif;

